# frappe-test

./: .gitignore  LICENSE  MANIFEST.in  README.md  preview_dashboard.html  pyproject.toml
growth_insights/: hooks.py  install.py  modules.txt
growth_insights/config/: desktop.py
growth_insights/fixtures/: workspace.json
growth_insights/growth_insights/: analytics.py
growth_insights/growth_insights/doctype/customer_lifecycle_event/: customer_lifecycle_event.js  customer_lifecycle_event.json  customer_lifecycle_event.py
growth_insights/growth_insights/doctype/energy_service_lifecycle_event/: energy_service_lifecycle_event.js  energy_service_lifecycle_event.json  energy_service_lifecycle_event.py
growth_insights/growth_insights/page/user_growth_dashboard/: user_growth_dashboard.css  user_growth_dashboard.js  user_growth_dashboard.json  user_growth_dashboard.py
growth_insights/growth_insights/report/user_growth_overview/: user_growth_overview.js  user_growth_overview.json  user_growth_overview.py
growth_insights/public/css/: growth_insights.css
growth_insights/public/js/: customer_lifecycle_event.js
